# idano

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: manage.py  pytest.ini  requirements.txt
backend/backend/: settings.py  urls.py
backend/blog/: models.py  serializer.py  urls.py  views.py
backend/blog/migrations/: 0001_initial.py  0002_alter_blogpost_category.py
backend/emailmessage/: apps.py  models.py  serializer.py  urls.py  views.py
backend/emailmessage/migrations/: 0001_initial.py
backend/project/: models.py  urls.py  views.py
backend/project/migrations/: 0001_initial.py  0002_remove_project_price.py
backend/tests/: test_blog_controllers.py  test_blog_model.py  test_controllers.py  test_email_controllers.py  test_email_model.py  test_models.py  test_project_controllers.py  test_project_model.py
