[project]
name = "idano"
version = "0.1.0"
description = "personal blog / portfolio"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref>=3.8.1",
    "cfgv>=3.4.0",
    "distlib>=0.3.9",
    "django>=5.1.2",
    "filelock>=3.16.1",
    "identify>=2.6.1",
    "nodeenv>=1.9.1",
    "pillow>=11.0.0",
    "platformdirs>=4.3.6",
    "pre-commit>=4.0.1",
    "pyyaml>=6.0.2",
    "ruff>=0.6.9",
    "sqlparse>=0.5.1",
    "virtualenv>=20.26.6",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-django>=4.9.0",
]

[tool.pytest.ini_options]
pythonpath = [
 ".", "blog", "project",
]
